--- a/surra-mobile/package.json
+++ b/surra-mobile/package.json
@@ -14,6 +14,7 @@
     "react": "16.9.0",
     "react-native": "0.61.3",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-percentage-circle": "^1.0.7",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.10.3",
